# CPP-Project-Template

./: CMakeLists.txt  README.md
catch/: catch.hpp
include/: Application.hpp
srcs/: Application.cpp  main.cpp
tests/: CMakeLists.txt  test.cpp
